--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.0.0",
+    "node-cron": "^4.2.1",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
