--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "AuthContext.tsx"]
+  "include": ["src", "AuthContext.tsx", "ProtectedRoute.tsx"]
 }
