--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ES2022",
     "outDir": "dist",
     "moduleResolution": "Bundler",
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "strict": true
   },
